--- a/ADD/Dockerfile
+++ b/ADD/Dockerfile
@@ -2,7 +2,7 @@ FROM almalinux:9
 RUN dnf install nginx -y
 RUN rm -rf /usr/share/nginx/html/index.html
 ADD https://raw.githubusercontent.com/shahabsb94/Dockerfiles/refs/heads/main/COPY/Dockerfile /usr/share/nginx/html/index.html
-RUN chmod +x /usr/share/nginx/html/index.html
+RUN chmod +r /usr/share/nginx/html/index.html
 CMD ["nginx", "-g", "daemon off;"]
 
 
