--- a/LABEL/Dockerfile
+++ b/LABEL/Dockerfile
@@ -7,7 +7,7 @@ LABEL  project = "expense" \
 # RUN rm -rf /usr/share/nginx/html/index.html
 # ADD https://raw.githubusercontent.com/shahabsb94/Dockerfiles/refs/heads/main/COPY/Dockerfile /usr/share/nginx/html/index.html
 # RUN chmod +r /usr/share/nginx/html/index.html
-# CMD ["nginx", "-g", "daemon off;"]
+CMD ["nginx", "-g", "daemon off;"]
 
 
 # CMD --> to start the nginx server with out systemctl
