--- a/EXPOSE/Dockerfile
+++ b/EXPOSE/Dockerfile
@@ -3,3 +3,6 @@ RUN dnf install nginx -y
 # there is no functionaly for expose it is just for information
 EXPOSE 80
 CMD [ "njinx", "-g", "daemon off;" ]
+
+## build
+## docker inspect expose:1.0.0
