--- a/ENV/Dockerfile
+++ b/ENV/Dockerfile
@@ -2,3 +2,21 @@ FROM almalinux:9
 ENV course="Devops" \
     trainer="shabu" \
     duration="120hrs"
+
+#     output 
+
+#  ec2-user@ip-172-31-77-53 ~/Dockerfiles/ENV ]$ docker exec -it ffb8eae0ad5f bash
+# [root@ffb8eae0ad5f /]# env
+# HOSTNAME=ffb8eae0ad5f
+# PWD=/
+# duration=120hrs
+# HOME=/root
+# LANG=C.utf8
+# TERM=xterm
+# LESSOPEN=||/usr/bin/lesspipe.sh %s
+# SHLVL=1
+# trainer=shabu
+# DEBUGINFOD_IMA_CERT_PATH=/etc/keys/ima:
+# PATH=/root/.local/bin:/root/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+# course=Devops
+# _=/usr/bin/env
