--- a/RUN/Dockerfile
+++ b/RUN/Dockerfile
@@ -1,2 +1,5 @@
 FROM almalinux:9  
 RUN dnf install nginx -y
+
+# Executes at the time of container creation --- CMD
+# Executes at the time of image building --- RUN
