--- a/CMD/Dockerfile
+++ b/CMD/Dockerfile
@@ -1,3 +1,6 @@
 FROM almalinux:9  
 RUN dnf install nginx -y
 CMD ["nginx", "-g", "daemon off;"]
+
+# Executes at the time of container creation --- CMD
+# Executes at the time of image building --- RUN
