--- a/WORKDIR/Dockerfile
+++ b/WORKDIR/Dockerfile
@@ -1,6 +1,6 @@
 FROM almalinux:9
 RUN mkdir /tmp/work-dir-demo
 RUN cd /tmp/work-dir-demo
-RUN PWD
+RUN pwd 
 RUN echo "Hello form work DIR" > Hello.txt
 CMD [ "sleep", "100" ]
