--- a/WORKDIR/Dockerfile
+++ b/WORKDIR/Dockerfile
@@ -1,6 +1,7 @@
 FROM almalinux:9
 RUN mkdir /tmp/work-dir-demo
-RUN cd /tmp/work-dir-demo
+# RUN cd /tmp/work-dir-demo
+WORKDIR /tmp/work-dir-demo
 RUN pwd 
 RUN echo "Hello form work DIR" > Hello.txt
 CMD [ "sleep", "100" ]
