--- a/ARG/Dockerfile
+++ b/ARG/Dockerfile
@@ -2,5 +2,7 @@ FROM almalinux:9
 ENV course="Devops" \
     trainer="shabu" \
     duration="120hrs"
-RUN echo "Hello ${trainer}" > /tmp/devops.txt
+#RUN echo "Hello ${trainer}" > /tmp/devops.txt
+ARG USERNAME=syed
+RUN echo "hello user: ${USERNAME}} > /tmp/devops.txt
 CMD [ "sleep", "100" ]
