--- a/ARG/Dockerfile
+++ b/ARG/Dockerfile
@@ -1,8 +1,10 @@
-FROM almalinux:9
+ARG version
+FROM almalinux:${version:-9}
 ENV course="Devops" \
     trainer="shabu" \
     duration="120hrs"
 #RUN echo "Hello ${trainer}" > /tmp/devops.txt
 ARG USERNAME=syed
-RUN echo "hello user: ${USERNAME}} > /tmp/devops.txt
+ENV USERNAME=$USERNAME
+RUN echo "hello user: ${USERNAME}" > /tmp/devops.txt
 CMD [ "sleep", "100" ]
